--- a/src/styles/mixins/_mixin.scss
+++ b/src/styles/mixins/_mixin.scss
@@ -4,6 +4,20 @@
     align-items: center;
 }
 
+@mixin flex-row($justify-content: center) {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: $justify-content;
+}
+
+@mixin flex-column($justify-content: center) {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: $justify-content;
+}
+
 @mixin font-family($variant: regular) {
     font-family: iranyekan + $variant;
 }
@@ -19,8 +33,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border-radius: 2px;
     user-select: none;
     background-color: var(--background-hovered);
     color: var(--dark-text);
+}
+
+@mixin widget {
+    width: 100%;
+    min-height: 45px;
+    background-color: #ddd;
 }
