fix prev next days, improved styles

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -37,3 +37,23 @@
     font-family: iranyekanthin;
     src: url("../assets/fonts/iranyekanwebthinfanum.woff") format("woff");
 }
+
+@font-face {
+    font-family: IRANSansRegular;
+    src: url("../assets/fonts/IRANSansFaNum.ttf") format("woff");
+}
+
+@font-face {
+    font-family: IRANSansBold;
+    src: url("../assets/fonts/IRANSansFaNum_Bold.ttf") format("woff");
+}
+
+@font-face {
+    font-family: IRANSansLight;
+    src: url("../assets/fonts/IRANSansFaNum_Light.ttf") format("woff");
+}
+
+@font-face {
+    font-family: IRANSansMedium;
+    src: url("../assets/fonts/IRANSansFaNum_Medium.ttf") format("woff");
+}
