--- a/src/styles/mixins/_colors.scss
+++ b/src/styles/mixins/_colors.scss
@@ -1,9 +1,10 @@
 :root {
     --highlight: #3bc0ed;
     --text-dark: #000000;
-    --text-light: #ffffff;
+    --text-light: #cacaca;
     --background: #ffffff;
     --background-disabled: #ccc;
     --background-hovered: #f2f2f2;
     --light: #ddd;
+    --text-negative:#d40b2c;
 }
