--- a/src/styles/mixins/_mixin.scss
+++ b/src/styles/mixins/_mixin.scss
@@ -18,8 +18,8 @@
     justify-content: $justify-content;
 }
 
-@mixin font-family($variant: regular) {
-    font-family: iranyekan + $variant;
+@mixin font-family($variant: Regular) {
+    font-family: IRANSans + $variant;
 }
 
 @mixin full {
@@ -34,16 +34,15 @@
     margin: 0;
     padding: 0;
     user-select: none;
-    background-color: var(--background-hovered);
     color: var(--dark-text);
 }
 
 @mixin widget {
     width: 100%;
-    min-height: 45px;
+    min-height: 40px;
     background-color: #ddd;
 }
+
 @mixin clickable {
     cursor: pointer;
 }
-
