--- a/src/styles/mixins/_colors.scss
+++ b/src/styles/mixins/_colors.scss
@@ -1,10 +1,10 @@
 :root {
-    --highlight: #3bc0ed;
+    --highlight: #59d3fc;
     --text-dark: #000000;
-    --text-light: #cacaca;
+    --text-light: #ffffff;
     --background: #ffffff;
     --background-disabled: #ccc;
     --background-hovered: #f2f2f2;
-    --light: #ddd;
-    --text-negative:#d40b2c;
+    --light: #ffffff;
+    --text-negative: #f83959;
 }
