--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,6 @@
+
+@import "./mixins/mixin";
+
 @font-face {
     font-family: iranyekanblack;
     src: url("../assets/fonts/iranyekanwebblackfanum.woff") format("woff");
@@ -56,4 +59,25 @@
 @font-face {
     font-family: IRANSansMedium;
     src: url("../assets/fonts/IRANSansFaNum_Medium.ttf") format("woff");
+}
+@font-face {
+    font-family: RobotoLight;
+    src: url("../assets/fonts/Roboto-Light.ttf") format("woff");
+}
+@font-face {
+    font-family: RobotoRegular;
+    src: url("../assets/fonts/Roboto-Regular.ttf") format("woff");
+}
+@font-face {
+    font-family: RobotoMedium;
+    src: url("../assets/fonts/Roboto-Medium.ttf") format("woff");
+}
+@font-face {
+    font-family: RobotoBold;
+    src: url("../assets/fonts/Roboto-Bold.ttf") format("woff");
+}
+
+
+.clickable {
+   @include clickable
 }
