--- a/src/styles/_day.scss
+++ b/src/styles/_day.scss
@@ -13,6 +13,10 @@
   color: var(--text-negative);
 }
 
+.off-day {
+  color: var(--text-negative);
+}
+
 .highlight {
   background-color: var(--highlight);
   color: var(--text-light);
