--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -8,7 +8,28 @@
     @include clickable;
     width: 18px;
     height: 18px;
+    filter: opacity(0.5);
+    &:hover {
+        filter: opacity(1);
+    }
 }
 
+.panel-header-item-text {
+    color: var(--text-dark);
+    &:hover {
+        color: var(--highlight);
+    }
+}
 
-
+.panel-header-year-picker {
+    @include flex-center;
+    p {
+        color: var(--text-dark);
+        &:hover {
+            color: var(--highlight);
+        }
+    }
+    span {
+        margin-inline: 4px;
+    }
+}
