--- a/src/styles/_years.scss
+++ b/src/styles/_years.scss
@@ -4,15 +4,15 @@
     height: 100%;
     max-width: 300px;
     place-items: center;
-    grid-template-columns: repeat(3, minmax(100px,100px));
+    grid-template-columns: repeat(3, minmax(100px, 100px));
     grid-template-rows: auto;
 }
-
 
 .years-body-rtl {
     @extend .years-body;
     direction: rtl;
 }
+
 .years-body-ltr {
     @extend .years-body;
     direction: ltr;
@@ -20,11 +20,18 @@
 
 .year-item {
     padding-block: 4px;
-    padding-inline: 12px;
     border-radius: 2px;
+    min-width: 54px;
     cursor: pointer;
-    // hover
+    @include flex-center;
 }
+
+.year-item-hovered {
+    &:hover {
+        background-color: var(--background-hovered);
+    }
+}
+
 .year-item-selected {
     background-color: var(--highlight);
     color: var(--text-light);
