--- a/src/styles/mixins/_colors.scss
+++ b/src/styles/mixins/_colors.scss
@@ -1,10 +1,10 @@
 :root {
-    --highlight: #59d3fc;
+    --highlight: #18c5ff;
     --text-dark: #000000;
     --text-light: #ffffff;
     --background: #ffffff;
-    --background-disabled: #ccc;
+    --background-disabled: #dedede;
     --background-hovered: #f2f2f2;
-    --light: #ffffff;
+    --light: #edededc7;
     --text-negative: #f83959;
 }
