--- a/src/styles/_day.scss
+++ b/src/styles/_day.scss
@@ -15,7 +15,7 @@
 
 .disabled {
     opacity: 0.4;
-    cursor: default !important;
+    cursor: not-allowed !important;
     background-color: var(--background-disabled);
 }
 
