--- a/src/styles/_day.scss
+++ b/src/styles/_day.scss
@@ -35,3 +35,8 @@
     background-color: var(--highlight);
     color: var(--text-light);
 }
+
+.highlight-day {
+    background-color: orange;
+    color: var(--text-light);
+}
