changed all of the logic of the range picker and seperate the logic to pick fromdate ant toDate

--- a/src/styles/_panel.scss
+++ b/src/styles/_panel.scss
@@ -22,11 +22,15 @@
     background-color: #ffffff;
     border-radius: 2px;
     overflow: hidden;
-    flex-direction: column;
     p {
         margin-block: 0;
         font-size: 14px;
     }
+}
+.panel-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .range-day-wrapper {
