--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -1,7 +1,7 @@
 @keyframes open {
     from {
         opacity: 0;
-        transform: scale(0.5, 0.5);
+        transform: scale(0.95, 0.95);
     }
     to {
         opacity: 1;
@@ -24,7 +24,6 @@
     animation-name: open;
     animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     animation-duration: 200ms;
-    transform-origin: top right;
     transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
     max-height: 352px;
     max-width: 300px;
@@ -34,7 +33,14 @@
     animation-name: close;
     animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     animation-duration: 170ms;
-    transform-origin: top right;
     transition: all 170ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
+}
+
+.open-vert-top {
+    transform-origin: bottom right;
+}
+
+.open-vert-bottom {
+    transform-origin: top right;
 }
