--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -1,7 +1,7 @@
 @import "./mixins/mixin";
 .picker-input-wrapper {
   margin: 0;
-  padding: 0;
+  padding-inline: 8px;
   height: 34px;
   width: 400px;
   max-width: 100%;
