--- a/src/styles/mixins/_colors.scss
+++ b/src/styles/mixins/_colors.scss
@@ -1,11 +1,12 @@
 :root {
   --highlight: #18c5ff;
-  --highlight-light: #e1f7ff;
+  --highlight-fade: #e1f7ff;
   --text-dark: #000000;
   --text-light: #ffffff;
   --background: #ffffff;
   --background-disabled: #dedede;
   --background-hovered: #f2f2f2;
-  --light: #edededc7;
+  --border: #edededc7;
   --text-negative: #f83959;
+  --day-label-background: #555555;
 }
